<resources>
    <string name="app_name">Kingdle</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_top">Top</string>
    <string name="title_read">Read</string>
    <string name="title_search">Search</string>
    <string name="title_saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Enter the title</string>
    <string name="search">Search</string>
    <string name="author">Enter the author</string>
    <string name="tvtitle">tvTitle</string>
    <string name="select">Please click the title to read</string>
    <string name="tvContent">Content</string>
    <string name="read">Read</string>
    <string name="Return">Return</string>
</resources>