<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_top">

    <fragment
        android:id="@+id/navigation_top"
        android:name="com.example.kingdle.TopFragment"
        android:label="@string/title_top"
        tools:layout="@layout/fragment_top">
    </fragment>
    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.kingdle.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read">
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.kingdle.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved">
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.kingdle.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
    </fragment>
</navigation>